# CUDA_Lab

./: .gitignore  readme.md
GEMV/: CMakeLists.txt  gemv_n128.cu  gemv_n16.cu  gemv_n32.cu
REDUCTION/: CMakeLists.txt  reduction_v1.cu  reduction_v2.cu  reduction_v3.cu  reduction_v4.cu  reduction_v5.cu  reduction_v6.cu
SGEMM/: CMakeLists.txt  readme.md  sgemm.cu  sgemm_v1.cu
Tests/: a.out  out.txt  test  test1  test1.cu
Tests/SharedMemory/: my_metrics.txt  test2  test2.cu
Tests/VectorType/: CMakeLists.txt  load_data.cu  load_data_86  out_86.txt  readme.md
